--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-extensions-kit",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "A library that provides extended HTML elements for web development.",
   "type": "module",
   "main": "index.js",
@@ -9,10 +9,10 @@
     "dev:vite": "vite",
     "dev:namespace": "chokidar 'src/**/*.ts' -c 'wca analyze src --format vscode --outDir .vscode && mv .vscode/ext-text-field.json .vscode/html-extension-elements.json'",
     "build:docs": "ts-node src/lib/document-index-generator.ts",
-    "build": "tsc && pnpm run build:docs && pnpm run lint && vite build",
+    "build": "tsc && pnpm run build:docs && pnpm run lint && vitest run && vite build",
     "lint": "prettier . --write && eslint . --fix",
     "format": "prettier . --write",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "keywords": [],
   "author": "Ohmry <o.ohmry@gmail.com>",
@@ -28,6 +28,7 @@
   "packageManager": "pnpm@10.20.0",
   "devDependencies": {
     "@eslint/js": "^9.39.0",
+    "@testing-library/dom": "^10.4.1",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^24.9.2",
     "chokidar-cli": "^3.0.0",
@@ -40,14 +41,15 @@
     "npm-run-all": "^4.1.5",
     "prettier": "3.6.2",
     "terser": "^5.44.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.2",
     "vite": "^7.1.12",
     "vite-plugin-dts": "^4.5.4",
+    "vitest": "^4.0.7",
     "web-component-analyzer": "^2.0.0"
   },
   "dependencies": {
-    "bootstrap-icons": "^1.13.1",
-    "ts-node": "^10.9.2"
+    "bootstrap-icons": "^1.13.1"
   }
 }
