--- a/package.json
+++ b/package.json
@@ -1,19 +1,29 @@
 {
   "name": "html-extensions-kit",
-  "version": "0.3.3",
-  "description": "A library that provides extended HTML elements for web development.",
+  "version": "0.3.4",
+  "description": "A library that provides extension elements to make web development easier.",
   "type": "module",
-  "main": "index.js",
+  "main": "dist/html-extensions-kit.min.js",
+  "module": "dist/html-extensions-kit.js",
+  "types": "dist/types/index.d.ts",
   "scripts": {
     "dev": "npm-run-all --parallel dev:vite dev:namespace",
     "dev:vite": "vite",
     "dev:namespace": "chokidar 'src/**/*.ts' -c 'wca analyze src --format vscode --outDir .vscode && mv .vscode/ext-text-field.json .vscode/html-extension-elements.json'",
-    "build:docs": "ts-node src/lib/document-index-generator.ts",
-    "build": "tsc && pnpm run build:docs && pnpm run lint && vitest run && vite build",
+    "tsc:core": "tsc -p tsconfig.core.json",
+    "lint:core": "prettier ./src/core --write && eslint ./src/core --fix",
+    "test:core": "vitest run --config vitest.config.core.ts",
+    "build:core": "pnpm run tsc:core && pnpm run lint:core && pnpm run test:core && vite build --config vite.config.core.ts",
+    "build:docs": "ts-node src/tools/document-index-generator.ts",
+    "build": "pnpm run build:docs && pnpm run format && pnpm run build:core",
     "lint": "prettier . --write && eslint . --fix",
     "format": "prettier . --write",
     "test": "vitest run"
   },
+  "files": [
+    "dist/*",
+    "!dist/core"
+  ],
   "keywords": [],
   "author": "Ohmry <o.ohmry@gmail.com>",
   "license": "MIT",
